renaming for me

--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "notes",
-  "displayName": "Notes",
+  "name": "notes_nl_highlighting",
+  "displayName": "Notes_NLH",
   "description": "Syntax highlighting for simple notes in Visual Studio Code",
   "icon": "images/icon.png",
   "version": "1.3.0",
-  "publisher": "canadaduane",
-  "repository": "https://github.com/canadaduane/vscode-notes",
+  "publisher": "lilfetz22",
+  "repository": "https://github.com/lilfetz22/vscode-notes",
   "engines": {
     "vscode": "^1.10.0"
   },
@@ -93,8 +93,8 @@
     ]
   },
   "__metadata": {
-    "id": "ccfb475f-3c67-45f3-a691-8588a006e64d",
-    "publisherDisplayName": "canadaduane",
-    "publisherId": "49b06e7f-44dd-4bc3-bf81-0c94b2c2c7f0"
+    "id": "",
+    "publisherDisplayName": "lilfetz22",
+    "publisherId": ""
   }
 }
