added functionality for numbers to be highlighted

--- a/package.json
+++ b/package.json
@@ -115,6 +115,11 @@
         "id": "adverb_language",
         "superType": "variable",
         "description": "Adverb"
+      },
+      {
+        "id": "value_type",
+        "superType": "regexp",
+        "description": "Value"
       }
     ]
   },
